Rework recipe view, add link to RecipeBook (#9)
* feat: rebuild field guide export pipeline

* feat: refact workflow

* feat: refact export workflow

* chore: update version

* feat: refact recipe viewer

* feat: update hmc

* feat: remove submodule

* chore: rename workflow

* feat: split workflow

* feat: add missing recipe fallback

* fix: missing recipe ids

* chore: update workflow

* feat: update workflow

* chore: upadte emi-recipe-renderer

* feat: ci language

* fix: workflow lang

* feat: update recipe viewer

* chore: update MEW

* feat: add compability to TMVR

* fix: TMVR recipei d

* feat: use exported multiblock data

* chore: remove unused files

* chore: clean code

* chore: clean code

* chore: remove unused software rasterize

* chore: clean code

* chore: remove unused code

* chore: update ci versions

* chore: clean code

* chore: refact

* refact: workflow

* fix: bundle name

* fix: format

* chore: adjust workflow

* fix: workflow

* fix: icon title

* fix: icon style

* fix: remove icon fallbacks

* fix: workflow

* fix: icon bg size

* fix: title icon

* feat: adjust workflow

* fix: add actions write permission to workflow

* fix: title icon size

---------

Co-authored-by: jmecn <115050813@qq.com>